2004-02-18 Simon Floery <chimaira@users.sf.net>
	* improved parser: functions, whitespaces, constants

2004-02-17 Simon Floery <chimaira@users.sf.net>
	* check end_ptr in strtods.

2004-02-02 Simon Floery <chimaira@users.sf.net>
	* basic implemenation of a parser for formula entry mode

2004-02-01 Simon Floery <chimaira@users.sf.net>
	* right mouse button click brings popup menu to control "Show menu bar"

2004-01-31 Simon Floery <chimaira@users.sf.net>
	* GUI integration of formula entry mode

2003-12-31 Simon Floery <chimaira@users.sf.net>
	* fixed DBTS #220857 (tooltips in RPN mode)

2003-11-21 Simon Floery <chimaira@users.sf.net>
	* patch: lower hex chars to upper chars (thanks to Remi)
	
2003-11-15 Simon Floery <chimaira@users.sf.net>
	* patch galculator.spec.in (thanks to Filippo)

2003-11-14 Simon Floery <chimaira@users.sf.net>
	* fixed sf.net #841527 (typo in de.po)

########################################
# 2003-11-10 galculator 1.1.4 released #
########################################

2003-11-09 Simon Floery <chimaira@users.sf.net>
	* RPN stack is remembered. several fixes
	* fixed DBTS #219390 (fixed de.po)
	* updated french and german translations
	* fixed sf.net #820399 (added p,P shortcuts)

2003-10-07 Simon Floery <chimaira@users.sf.net>	
	* introduced display_result_changed. fixes sf.net bug #750519

2003-09-23 Simon Floery <chimaira@users.sf.net>
	* agreed to and fixed sf.net bug #799417 (memory save, memory read and
	constant retrieve start new calc entry)

2003-09-20 Simon Floery <chimaira@users.sf.net>
	* sf.net bug #798511 fixed

2003-09-19 Simon Floery <chimaira@users.sf.net>
	* RPN updates: rolldown stack, swap xy on stack 
	(satifies sf.net fr #799397 and DBTS #202633)

2003-09-18 Simon Floery <chimaira@users.sf.net>
	* src/display.c: display RPN stack
	
2003-09-11 Simon Floery <chimaira@users.sf.net>
	* ui/prefs.galde: added (in)finite RPN stack option, naturally updates
	to config code, etc.