@@ -1,3 +1,6 @@
+2004-02-26 Simon Floery <chimaira@users.sf.net>
+	* improved parser: factorial, complement
+
 2004-02-18 Simon Floery <chimaira@users.sf.net>
 	* improved parser: functions, whitespaces, constants
 
